# regp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  reccmp-project.yml
.githooks/: README.md  pre-commit  pre-commit.ps1
STUNTGP_D3D/: README.md  common.cpp  common.h  globals.cpp  globals.h  library_msvc.h  main.cpp  pure.h  pure_api.cpp  uwu.cpp  uwu.h  windowInit.cpp  windowInit.h
STUNTGP_D3D/Game/GameEngine/: Engine_LevelScript.cpp  Engine_LevelScript.h  Game.cpp  Game.h  io_wad.cpp  io_wad.h
StuntGP/: StdAfx.cpp  StdAfx.h  StuntGP.cpp  StuntGP.h  library_msvc.h
StuntGP/res/: resource.h
originals/: put_binaries_here.txt
status/: StuntGP.html  StuntGP.json  StuntGP_D3D.html  StuntGP_D3D.json
tools/: requirements.txt
